# Heart-Attack-Diagnostic-Program

./: CMakeLists.txt  Heart Attack Diagnostic Program.cpp  LICENSE.md  README.md  heart_attack_diagnostic.cpp
